RESOLVED FIXED35947
Fix review comment accidentally overlooked in bug 35713
https://bugs.webkit.org/show_bug.cgi?id=35947
Summary Fix review comment accidentally overlooked in bug 35713
Ojan Vafai
Reported 2010-03-09 15:50:53 PST
Fix review comment accidentally overlooked in bug 35713
Attachments
Patch (1.83 KB, patch)
2010-03-09 15:51 PST, Ojan Vafai
darin: review+
Ojan Vafai
Comment 1 2010-03-09 15:51:10 PST
Ojan Vafai
Comment 2 2010-03-09 15:51:51 PST
Doh. Adam, sorry for the goofup. Meant to fix this before committing and then went braindead. :)
Ojan Vafai
Comment 3 2010-03-09 16:17:19 PST
Note You need to log in before you can comment on or make changes to this bug.