2010-03-09  Ojan Vafai  <ojan@chromium.org>

Reviewed by Darin Adler.

        Fix review comment accidentally overlooked in bug 35713
        https://bugs.webkit.org/show_bug.cgi?id=35947

        * editing/DeleteSelectionCommand.cpp:
        (WebCore::DeleteSelectionCommand::setStartingSelectionOnSmartDelete):
        * editing/DeleteSelectionCommand.h:

Canonical link: https://commits.webkit.org/47050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55753 268f45cc-cd09-0410-ab3c-d52691b4dbfc